# captioneer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  captioneer.py  embed.py  pyproject.toml  srt_utils.py  transcribe.py  translate.py  translate_srt.py
.github/workflows/: ci.yml  publish.yml
scripts/: release.sh
src/captioneer/: __init__.py  __main__.py  cli.py  embed.py  srt_utils.py  transcribe.py  translate.py  ui.py
tests/: test_cli.py  test_embed.py  test_srt_utils.py  test_transcribe.py  test_translate.py
