[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "captioneer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.0",
    "deep-translator>=1.11.0",
    "typer>=0.12.0",
]

[project.scripts]
captioneer = "captioneer:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]
