[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "captioneer"
version = "0.1.0"
description = "Transcribe, translate and embed subtitles in videos"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.0",
    "deep-translator>=1.11.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
captioneer = "captioneer.cli:app"

[project.urls]
Repository = "https://github.com/patarra/captioneer"

[tool.setuptools.packages.find]
where = ["src"]
